--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "my-app",
+  "homepage": "https://imranaxix.github.io/LosPollosHermanos",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^10.7.2",
+    "postcss": "^8.4.33",
+    "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -15,7 +21,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "build:css": "postcss path/to/your/styles.css -o path/to/your/output.css"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +43,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^6.1.1",
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-cli": "^0.1.2"
   }
 }
